fix React 2-8~2-9 article content

--- a/react進化思維/2-8~2-9.md
+++ b/react進化思維/2-8~2-9.md
@@ -39,7 +39,7 @@
 
 - 2.  component 的 re-render 機制啟動，更新 state 資料並執行 component function，產生新的 React Element。
 - 3.  比較新舊 React Element，透過 `diffing` 演算法比較樹狀結內容。
-- 4.  依據差異更新實際的 DOM
+- 4.  依據差異更新實際的 DOM。
 
 ### - 一個 component 有哪些可能會被觸發 re-render 的情形？
 
